Add preset info to /config response (#10)
